frontend/test/should_pass/alterror.grg
using alterror;

rule error
{
  node1:gnode;
  alternative
  {
    alt_error {
      if {( node1.info ) in set<string>{"plip", "plop" };}

      alternative
      {
        alt_alt_error {
          if {( node1.info ) in set<string>{"plip", "ploup" };}

          modify {
            node2:gnode;
            node1 -:gedge-> node2;
          }
        }
      }

      modify {
        node2:gnode;
        node1 -:gedge-> node2;
      }
    }
  }

  modify {
  }
}

